--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^7.6.0",
-    "cross-env": "^7.0.3",
-    "husky": "^8.0.3"
+    "cross-env": "^7.0.3"
   }
 }
