--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "devDependencies": {
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3"
+  },
+  "dependencies": {
+    "react-router-dom": "^6.9.0"
   }
 }
