--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "init": "^0.1.2",
+    "jspdf": "^2.5.1",
     "npx": "^10.2.2",
     "prop-types": "^15.8.1",
     "qrcode": "^1.5.1",
