--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
+    "dompurify": "^3.0.1",
     "got": "^12.6.0",
     "init": "^0.1.2",
     "jspdf": "^2.5.1",
